Dodanie aby klasa SettingsData wczytywala i zapisywala dane z pliku. Pierwsza proba implementacji przekazania danych o obecnym poziomie

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(main
     src/player.cpp 
     src/raport.cpp
     src/settings.cpp
+    src/settingsData.cpp
     src/buttons.cpp
     src/buttons/button.cpp
     src/buttons/textButton.cpp
