usuniecie funkcji oznaczonych jako deprecated z spriteButton. Dodanie klasy TextBox, naprawa w LevelSelection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ add_executable(main
     src/buttons/RectangleButton.cpp
     src/buttons/slider.cpp
     src/buttons/progressbar.cpp
+    src/buttons/textBox.cpp
 )
 
 # Ustawienie wersji standardu C++
