wyczekiwany kolkowy przycisk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_executable(main
     src/buttons/slider.cpp
     src/buttons/progressbar.cpp
     src/buttons/textBox.cpp
+    src/buttons/circleButton.cpp
 )
 
 # Ustawienie wersji standardu C++
