pierwsza prca nad klasa car

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,9 @@ add_executable(main
     src/raport.cpp
     src/settings.cpp
     src/settingsData.cpp
+
+    src/car.cpp
+
     src/buttons.cpp
     src/buttons/button.cpp
     src/buttons/textButton.cpp
